# webcam-segmentation

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
examples/: read_frames.rs
src/: cli.rs  lib.rs  main.rs  model.rs  ort_backend.rs  yolo_result.rs
