[package]
name = "yolov8-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp-encoder"] }
ndarray = { version = "0.15.6" }
anyhow = { version = "1.0.75"}
regex = { version = "1.5.4" }
chrono = { version = "0.4.30" }
half = { version = "2.3.1" }
v4l = "0.14.0"
opencv = { version = "0.89.0", features = ["clang-runtime", "highgui", "imgproc", "imgcodecs"] }
zune-jpeg = "0.4.11"
turbojpeg = { version = "1.0.1", features = ["image"] }

[dependencies.ort]
version = "1.16.3"
default-features = false
features = ["load-dynamic", "copy-dylibs", "half", "cuda", "tensorrt"]
